force-app/main/default/objects/FS_TargetArtifact__c/FS_TargetArtifact__c.object-meta.xml
<CustomObject>
    <description>TargetArtifact..</description>
    <label>TargetArtifact</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TargetArtifacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>