force-app/main/default/objects/FS_TargetArtifact__c/fields/AB_Ver__c.field-meta.xml
<CustomField>
    <fullName>AB_Ver__c</fullName>
    <description>..</description>
    <formula>if( ISPICKVAL( Actual_Id__r.FS_Artifact_Type__c , &#39;Bundle&#39;),  Actual_Id__r.FS_Version__c  , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AB Ver</label>
    <type>Text</type>
</CustomField>