force-app/main/default/objects/FS_TargetArtifact__c/fields/Actual_CUI__c.field-meta.xml
<CustomField>
    <fullName>Actual_CUI__c</fullName>
    <formula>if( ISPICKVAL( Actual_Id__r.FS_Artifact_Type__c , &#39;CUI&#39;), Actual_Id__r.Name , &quot;&quot;)</formula>
    <label>ActualCUI</label>
    <type>Text</type>
</CustomField>