force-app/main/default/objects/FS_TargetArtifact__c/fields/Actual_RoundingRules__c.field-meta.xml
<CustomField>
    <fullName>Actual_RoundingRules__c</fullName>
    <description>..</description>
    <formula>if( ISPICKVAL( Actual_Id__r.FS_Artifact_Type__c , &#39;RoundingRules&#39;), Actual_Id__r.Name , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual RoundingRules</label>
    <type>Text</type>
</CustomField>