force-app/main/default/objects/FS_TargetArtifact__c/fields/Actual_Software__c.field-meta.xml
<CustomField>
    <fullName>Actual_Software__c</fullName>
    <description>..</description>
    <formula>if( ISPICKVAL( Actual_Id__r.FS_Artifact_Type__c , &#39;Software&#39;),  Actual_Id__r.Name , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Software</label>
    <type>Text</type>
</CustomField>