force-app/main/default/objects/FS_TargetArtifact__c/fields/DR_RR_Ver__c.field-meta.xml
<CustomField>
    <fullName>DR_RR_Ver__c</fullName>
    <description>..</description>
    <formula>if( ISPICKVAL( DryRunId__r.FS_Artifact_Type__c , &#39;RoundingRules&#39;) , DryRunId__r.FS_Version__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DR RR Ver</label>
    <type>Text</type>
</CustomField>