force-app/main/default/objects/FS_TargetArtifact__c/fields/DRB_Ver__c.field-meta.xml
<CustomField>
    <fullName>DRB_Ver__c</fullName>
    <description>..</description>
    <formula>if( ISPICKVAL( DryRunId__r.FS_Artifact_Type__c , &#39;Bundle&#39;) ,  DryRunId__r.FS_Version__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DRB Ver</label>
    <type>Text</type>
</CustomField>