force-app/main/default/objects/FS_TargetArtifact__c/fields/DRS_Ver__c.field-meta.xml
<CustomField>
    <fullName>DRS_Ver__c</fullName>
    <description>..</description>
    <formula>if( ISPICKVAL( DryRunId__r.FS_Artifact_Type__c , &#39;Software&#39;) ,   DryRunId__r.FS_Version__c  , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DRS Ver</label>
    <type>Text</type>
</CustomField>