force-app/main/default/objects/FS_TargetArtifact__c/fields/Dry_Run_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Dry_Run_Bundle__c</fullName>
    <description>..</description>
    <formula>if( Text(DryRunId__r.FS_Artifact_Type__c) = &#39;Bundle&#39;,   DryRunId__r.Name  , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dry Run Bundle</label>
    <type>Text</type>
</CustomField>