force-app/main/default/objects/FS_TargetArtifact__c/fields/Dry_Run_CUI__c.field-meta.xml
<CustomField>
    <fullName>Dry_Run_CUI__c</fullName>
    <formula>if( ISPICKVAL( DryRunId__r.FS_Artifact_Type__c , &#39;CUI&#39;), DryRunId__r.Name , &quot;&quot;)</formula>
    <label>Dry RunCUI</label>
    <type>Text</type>
</CustomField>