force-app/main/default/objects/FS_TargetArtifact__c/fields/Dry_Run_Software__c.field-meta.xml
<CustomField>
    <fullName>Dry_Run_Software__c</fullName>
    <description>..</description>
    <formula>if( ISPICKVAL( DryRunId__r.FS_Artifact_Type__c , &#39;Software&#39;) ,  DryRunId__r.Name , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dry Run Software</label>
    <type>Text</type>
</CustomField>