force-app/main/default/objects/FS_TargetArtifact__c/fields/DryRunId__c.field-meta.xml
<CustomField>
    <fullName>DryRunId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>..</description>
    <label>DryRun Id</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FS_TargetArtifact__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dry Run</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FS_TargetArtifact__c</referenceTo>
    <relationshipLabel>TargetArtifacts (DryRunId)</relationshipLabel>
    <relationshipName>DryRunArtifacts</relationshipName>
    <type>Lookup</type>
</CustomField>