force-app/main/default/objects/FS_TargetArtifact__c/fields/FS_ODRecID__c.field-meta.xml
<CustomField>
    <fullName>FS_ODRecID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Outlet Dispenser Rec ID..</description>
    <label>ODRecID</label>
    <referenceTo>FS_Outlet_Dispenser__c</referenceTo>
    <relationshipLabel>TargetArtifacts</relationshipLabel>
    <relationshipName>TargetArtifacts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>