force-app/main/default/objects/FS_TargetArtifact__c/fields/FS_Rule_Set__c.field-meta.xml
<CustomField>
    <fullName>FS_Rule_Set__c</fullName>
    <description>..</description>
    <label>Rule Set</label>
    <length>80</length>
    <type>Text</type>
</CustomField>