force-app/main/default/objects/FS_TargetArtifact__c/fields/FS_Version__c.field-meta.xml
<CustomField>
    <fullName>FS_Version__c</fullName>
    <description>version..</description>
    <label>Version</label>
    <length>15</length>
    <type>Text</type>
</CustomField>