force-app/main/default/objects/FS_TargetArtifact__c/fields/Non_Compliant_Id__c.field-meta.xml
<CustomField>
    <fullName>Non_Compliant_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non Compliant Id</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Record Type should be Non Compliant</errorMessage>
        <filterItems>
            <field>FS_TargetArtifact__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Non Compliant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FS_TargetArtifact__c</referenceTo>
    <relationshipLabel>NonComp Target Artifacts</relationshipLabel>
    <relationshipName>NonCompTargetArtifacts</relationshipName>
    <type>Lookup</type>
</CustomField>