force-app/main/default/objects/FS_TargetArtifact__c/fields/Non_Compliant_RoundingRule_Ver__c.field-meta.xml
<CustomField>
    <fullName>Non_Compliant_RoundingRule_Ver__c</fullName>
    <formula>if( ISPICKVAL( Non_Compliant_Id__r.FS_Artifact_Type__c , &#39;RoundingRules&#39;) , Non_Compliant_Id__r.FS_Version__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NonComp RR Ver</label>
    <type>Text</type>
</CustomField>