force-app/main/default/objects/FS_TargetArtifact__c/fields/Non_Compliant_Software__c.field-meta.xml
<CustomField>
    <fullName>Non_Compliant_Software__c</fullName>
    <formula>if(ISPICKVAL( Non_Compliant_Id__r.FS_Artifact_Type__c , &#39;Software&#39;), Non_Compliant_Id__r.Name , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Compliant Software</label>
    <type>Text</type>
</CustomField>