force-app/main/default/objects/FS_TargetArtifact__c/fields/OD_Settings_ReadOnly_Id__c.field-meta.xml
<CustomField>
    <fullName>OD_Settings_ReadOnly_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>..</description>
    <label>OD Settings ReadOnly Id</label>
    <referenceTo>FS_OD_SettingsReadOnly__c</referenceTo>
    <relationshipLabel>TargetArtifacts</relationshipLabel>
    <relationshipName>TargetArtifacts</relationshipName>
    <type>Lookup</type>
</CustomField>