force-app/main/default/objects/FS_TargetArtifact__c/fields/OD_SettingsId__c.field-meta.xml
<CustomField>
    <fullName>OD_SettingsId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>..</description>
    <label>OD SettingsId</label>
    <referenceTo>FS_OD_Settings__c</referenceTo>
    <relationshipLabel>TargetArtifacts</relationshipLabel>
    <relationshipName>OD_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>