force-app/main/default/objects/FS_TargetArtifact__c/fields/RollbackId__c.field-meta.xml
<CustomField>
    <fullName>RollbackId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>..</description>
    <label>Rollback Id</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FS_TargetArtifact__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Rollback</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FS_TargetArtifact__c</referenceTo>
    <relationshipLabel>TargetArtifacts (RollbackId)</relationshipLabel>
    <relationshipName>RollbackArtifacts</relationshipName>
    <type>Lookup</type>
</CustomField>