force-app/main/default/objects/FS_TargetArtifact__c/fields/Target_CUI__c.field-meta.xml
<CustomField>
    <fullName>Target_CUI__c</fullName>
    <formula>if( ISPICKVAL( Target_Id__r.FS_Artifact_Type__c , &#39;CUI&#39;), Target_Id__r.Name , &quot;&quot;)</formula>
    <label>TargetCUI</label>
    <type>Text</type>
</CustomField>