force-app/main/default/objects/FS_TargetArtifact__c/fields/Target_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>..</description>
    <label>Target Id</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FS_TargetArtifact__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Target</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FS_TargetArtifact__c</referenceTo>
    <relationshipLabel>TargetArtifacts</relationshipLabel>
    <relationshipName>TargetArtifacts</relationshipName>
    <type>Lookup</type>
</CustomField>