force-app/main/default/objects/FS_TargetArtifact__c/fields/Target_Settings__c.field-meta.xml
<CustomField>
    <fullName>Target_Settings__c</fullName>
    <description>..</description>
    <formula>if( ISPICKVAL( Target_Id__r.FS_Artifact_Type__c , &#39;Settings&#39;), Target_Id__r.Name , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Settings</label>
    <type>Text</type>
</CustomField>