force-app/main/default/objects/FS_TargetArtifact__c/fields/Target_Software__c.field-meta.xml
<CustomField>
    <fullName>Target_Software__c</fullName>
    <description>..</description>
    <formula>if( ISPICKVAL( Target_Id__r.FS_Artifact_Type__c , &#39;Software&#39;) ,   Target_Id__r.Name  , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Software</label>
    <type>Text</type>
</CustomField>