force-app/main/default/objects/FS_TargetArtifact__c/fields/TB_Ver__c.field-meta.xml
<CustomField>
    <fullName>TB_Ver__c</fullName>
    <description>..</description>
    <formula>if( ISPICKVAL( Target_Id__r.FS_Artifact_Type__c , &#39;Bundle&#39;),  Target_Id__r.FS_Version__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TB Ver</label>
    <type>Text</type>
</CustomField>