force-app/main/default/objects/FS_TargetArtifact__c/fields/TS_Ver__c.field-meta.xml
<CustomField>
    <fullName>TS_Ver__c</fullName>
    <description>..</description>
    <formula>if( ISPICKVAL( Target_Id__r.FS_Artifact_Type__c , &#39;Software&#39;) ,  Target_Id__r.FS_Version__c  , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TS Ver</label>
    <type>Text</type>
</CustomField>