force-app/main/default/objects/FS_TargetArtifact__c/recordTypes/Base.recordType-meta.xml
<RecordType>
    <fullName>Base</fullName>
    <active>true</active>
    <description>Base</description>
    <label>Base</label>
</RecordType>