force-app/main/default/objects/FS_TargetArtifact__c/recordTypes/FS_Actual.recordType-meta.xml
<RecordType>
    <fullName>FS_Actual</fullName>
    <active>true</active>
    <description>Actual</description>
    <label>Actual</label>
</RecordType>