force-app/main/default/objects/FS_TargetArtifact__c/recordTypes/FS_Rollback.recordType-meta.xml
<RecordType>
    <fullName>FS_Rollback</fullName>
    <active>true</active>
    <description>Rollback</description>
    <label>Rollback</label>
</RecordType>