force-app/main/default/objects/FS_TargetArtifact__c/recordTypes/FS_Target.recordType-meta.xml
<RecordType>
    <fullName>FS_Target</fullName>
    <active>true</active>
    <description>Target</description>
    <label>Target</label>
</RecordType>