force-app/main/default/objects/FS_TargetArtifact__c/recordTypes/Non_Compliant.recordType-meta.xml
<RecordType>
    <fullName>Non_Compliant</fullName>
    <active>true</active>
    <label>Non Compliant</label>
</RecordType>